3Scale-Anton/Useful-Yaml/allow-all-project.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector: 
          matchLabels:
            project: 3scale-app
        podSelector: 
          matchLabels:
            deploymentconfig: apicast
