3Scale-Anton/Useful-Yaml/network-policy-demo-app.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-apicast
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            project: 3scale-app
        podSelector:
          matchLabels:
            deploymentconfig: apicast
